next
-added clean_fasta component which modifies fasta files according to FASTA specifications
-modified Makefile.PL to install global_template_pipelines
-fixed the nucmer component bug for taking it a reference file 
-added fetch_genbank component which downloads genBank files given a string of accession numbers
-added chado2flatfile component which creates flat files like .pep, .seq and .coords 
-tag_data.xml & tag_data.config : added INPUT variable and removed INPUT_FILE
-bowtie: Updated component to make use of an iterator
-bowtie_build: Updated component to make use of an iterator
-mugsycog.xml: removed all the commands and added them into mugsycog_distributed_work.xml so that all these memory intensive ones will be run on exec node
-gff3_to_gbrowse: new component
-bowtie: new component
-bsml2gff3 - Added gbrowse_dbxref_map parameter
-mugsyalig_distributed_work.xml, j_ortholog_clusters_distributed_work.xml, pangenome_blast_parse_distributed_work.xml, pangenome_do_analysis_distributed_work.xml: added these xmls that contain distributed commands
-mugsyalign.xml, j_ortholog_clusters.xml, pangenome_blast_parse.xml, pangenome_do_analysis.xml: modified so that all distributed commands are placed in their own files and then called as remote-serial. This way they can be run on any cluster and on igs grid with out choking the master node at IGS.
-genbank2bsml.i1.xml, mugsyprep.xml, mugsyprep.mugsymap.xml, muscle.i1.xml : changed $;TMP_DIR$; to $;OUTPUT_DIRECTORY$; and added create req dir commands to iterator files
-software.config : added MUGSY_EXEC variable for mugsyalign component
-mugsyaling.xml : added MUGSY_EXEC variable instead of hard typing the mugsy path; added OTHER_OPTS 
-tag_data.pl: Before file1,file2,file3 only works. Changed code so that file1, file2  file3,   file4 also works
-create_file_iterator_list.pl: changed file extension matching regex to allow digits
-fastq_to_CA: new component